# cifkit

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  example.ipynb  main.py  mkdocs.yml  mypy.ini  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.ipynb  test_polyhedron.py  tox.ini
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-wheel-release-upload.yml  build-wheels-publish.yml  build-wheels.yml  check-news.py  python-run-pytest.yml
alex-test/: Os.cif
danila-test/: 260404.cif  261156.cif  453820.cif
docs/: api.md  api_reference.md  index.md  page2.md  references.md
docs/notebooks/: 00_Intro.ipynb  01_cif.ipynb  02_cif_ensemble.ipynb  02_plot.ipynb
news/: news-ci.rst
src/cifkit/: __init__.py
src/cifkit/coordination/: composition.py  filter.py  geometry.py
src/cifkit/data/: example.py  radius.py
src/cifkit/figures/: histogram.py  polyhedron.py
src/cifkit/models/: cif.py  cif_ensemble.py
src/cifkit/occupacny/: mixing.py
src/cifkit/preprocessors/: error.py  supercell.py
src/cifkit/utils/: cif_editor.py  cif_parser.py  folder.py  log_messages.py
src/cifpy/coordination/: composition.py  connection.py  coordinate.py  distance.py  filter.py  geometry.py  method.py  polyhedron.py  site.py
src/cifpy/data/: mendeleev.py  radius.py  radius_handler.py  radius_optimization copy.py  radius_optimization.py
src/cifpy/figures/: histogram.py  simple_histogram.py
src/cifpy/models/: cif.py  cif_ensemble.py
src/cifpy/occupacny/: mixing.py
src/cifpy/postprocessors/: bond.py  neighbor.py  site.py
src/cifpy/preprocess/: environment.py  format.py  supercell.py
src/cifpy/preprocessors/: environment.py  environment_util.py  error.py  format.py  supercell.py
src/cifpy/util/: cif_editor.py  cif_parser.py  distance.py  error_messages.py  folder.py  formula.py  string_parser.py  unit.py
src/cifpy/utils/: bond.py  bond_pair.py  cif_editor.py  cif_parser.py  distance.py  error_messages.py  folder.py  formula.py  prompt.py  random.py  sort.py  string_parser.py  unit.py
tests/: conftest.py
tests/core/coordination/: test_bond.py  test_bond_distance.py  test_composition.py  test_connection.py  test_coordinate.py  test_distance.py  test_filter.py  test_geometry.py  test_method.py  test_site.py  test_site_distance.py
tests/preprocess/: test_environment.py  test_format.py  test_supercell.py
tests/util/: conftest.py  test_cif_editor.py  test_cif_parser.py  test_folder.py  test_formula.py  test_string_parser.py  test_unit.py
(+41 files in other folders)
