

[project]
name = "cifkit"
version = "1.0.2"
description = "Python library for high-throughput .cif analysis"
authors = [{name = "Sangjoon Lee", email = "bobleesj@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cif", "solid-state", "high-throughput", "crystallography"]

dependencies = [
    "gemmi==0.6.6",
    "matplotlib==3.9.1",
    "numpy==2.0.0",
    "pyvista==0.43.10",
    "scipy==1.14.0",
    "setuptools==67.8.0",
    "click==8.1.7"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79
