[project]
name = "cifkit"
version = "1.0.5"
requires-python = ">=3.10"
description = "Python library for high-throughput .cif analysis"
authors = [{name = "Sangjoon Lee", email = "bobleesj@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cif", "solid-state", "high-throughput", "crystallography"]

dependencies = [
    "gemmi",
    "matplotlib",
    "numpy",
    "pyvista",
    "scipy",
    "setuptools",
    "click"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Documentation = "https://bobleesj.github.io/cifkit"
Repository = "https://github.com/bobleesj/cifkit"
Issues = "https://github.com/bobleesj/cifkit/issues"
Changelog = "https://github.com/bobleesj/cifkit/blob/main/CHANGELOG"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79
